--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "random-puppy": "^1.1.0"
   },
   "devDependencies": {
-    "eslint": "^7.27.0"
+    "eslint": "^7.27.0",
+    "yt-search": "^2.10.1",
+    "ytdl-core": "^4.9.1"
   }
 }
