--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "discord.js": "^12.5.3",
     "got": "^11.8.2",
+    "moment": "^2.29.1",
     "opusscript": "^0.0.8",
     "random-puppy": "^1.1.0"
   },
